--- a/css/style.css
+++ b/css/style.css
@@ -23,14 +23,17 @@ body{
 
 .page {
   min-height:16% !important; 
-  /* width:100% !important; */
 }
 
-.hideme
+/* .hideme
 {
   opacity:0;
-}
+} */
 
+.row {
+  margin: 0;
+  padding: 0;
+}
 #home h1 {
   color: white;
   text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
@@ -65,17 +68,6 @@ body{
   /* background-color: khaki; */
   font-family: 'Notable', sans-serif;
   contain: content;
-}
-
-#home img{
-  max-width: 100%;
-  max-height: 75vh;
-  margin: 75px;
-}
-
-img:hover {
-  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-  filter: grayscale(100%);
 }
 
 .social-connect {
